# DIVE

./: .gitignore  README.md  dive.example.yaml  pyproject.toml  run.sh
data/: exemplars.jsonl  seeds_academic.json  seeds_biological.json  seeds_financial.json  seeds_medical.json
dive/: __init__.py  __main__.py  aggregator.py  cli.py  llm.py  paths.py  solver.py  synthesizer.py  tool_runner.py  utils.py  verifier.py
docs/: index.html  index.html.bak
docs/benchmarks/: browsecomp.html  dive-eval.html  fab.html  finsearchcomp.html  gaia.html  hle.html  medagentbench.html  swebench.html  toolathlon.html  xbench.html
docs/static/css/: style.css  style.css.bak
docs/static/js/: main.js
tests/: test_synthesizer.py  test_utils.py
tools/configs/: academic.json  biological.json  financial.json  general.json  medical.json
tools/test/: __init__.py  base_verifiable_tool_test.py
tools/test/academic/arxiv/: __init__.py  test_arxiv_advanced_search.py  test_arxiv_get_papers_by_ids.py  test_arxiv_search_by_author.py  test_arxiv_search_by_category.py  test_arxiv_search_by_date_range.py  (+1 more)
tools/test/biological/: __init__.py
tools/test/financial/: __init__.py
tools/test/general/: __init__.py
tools/test/medical/: __init__.py
tools/tools/: __init__.py
tools/tools/biological/: __init__.py  biopython_tools_analysis.json
tools/tools/core/: registry.py  runner.py  tool.py  types.py
tools/tools/financial/: __init__.py
tools/tools/general/: __init__.py  browse.py  code_execution.py  parallel_search.py  search.py
tools/tools/medical/: __init__.py
(+792 files in other folders)
